--- a/pkg/common/envs/.env
+++ b/pkg/common/envs/.env
@@ -1,2 +1,3 @@
-PORT=: 3001
-DB_URL=: postgres://seansoo:root@localhost:5432/portfolio_backend
+
+PORT=:3000
+DB_URL=postgres://seansoo:root@localhost:5432/PortfolioBackend
